k8s/ingress.yaml
apiVersion: #{ingress.version}#
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-#{deploymentName}#
  namespace: #{namespace}#
spec:
  rules:
    - http:
        paths:
          - path: /#{deploymentName}#(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: #{deploymentName}#
                port:
                  number: 8080
